--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,70 @@ section {
     text-transform: uppercase;
     letter-spacing: 4px;
     background-color: transparent;
-    border-image: linear-gradiente(#3BA1CD,#1572B7);
+    border-image: linear-gradient(#3BA1CD,#1572B7);
     border-image-slice: 10;
     border-radius: 30px;
+}
+
+#course-content {
+    width: 800px;
+    text-align: center;
+}
+
+#course-content .modules-list .module {
+    color: white;
+    width: 530px;
+    margin: 0 auto 24px;
+    border: 1px solid #33A8DB;
+    background-color: #252525;
+    padding: 16px;
+    border-radius: 100px;
+    box-shadow: inset -5px 6px 8px rgba(0, 0, 0, .7);
+}
+
+#course-content .modules-list .module span {
+    color: #33A8DB;
+}
+
+#transform-world {
+    height: 560px;
+    background-size: cover;
+    background-image: url('../images/woman-code.png');
+    background-attachment: fixed;
+    border-top: 1px solid #33A8DB80;
+    border-bottom: 1px solid #33A8DB80;
+    padding: 200px;
+}
+
+#transform-world p {
+    font-weight: 900;
+    font-size: 2.5rem;
+    text-transform: lowercase;
+    max-width: 250px;
+    text-shadow: 3px 2px #33A8DB80;
+}
+
+#professional-challenges {
+    text-align: center;
+    width: 800px;
+}
+
+#professional-challenges img{
+    margin: 32px 0;
+}
+
+footer {
+    padding: 60px 0;
+    text-align: center;
+    background-image: linear-gradient(rgba(50,168,219,.0),rgba(50,168,219,.2));
+}
+
+footer .dio-logo {
+    width: 300px;
+}
+
+footer {
+    color: #33A8DB;
+    font-weight: bold;
+    text-decoration: none;
 }
